# tree_path_queries

./: .gitignore  CMakeLists.txt  README.md  _Deparsed_XSubs.pm  cmakeconfigs
experiments/managers/: fixed_dataset_manager.hpp  fixed_processor_manager.hpp
experiments/utils/: experimental_run.hpp  experiments_container.hpp  query_stream_builder.hpp
gui/: EconomistStyleQCPAxis.cpp  EconomistStyleQCPAxis.h  PlainLegendItem.cpp  PlainLegendItem.h  UserControls.hpp  main.cpp  main_gui.cpp  main_gui.h  qcustomplotutils.cpp  tpq_gui.cpp  tpq_gui.h
include/data_structures/hpd/: heavy_path_decomp.hpp
include/data_structures/hybrid/: hybrid_processor.hpp
include/data_structures/plain/: ext_ptr.cpp  ext_ptr.hpp  naive_processor.hpp  naive_processor_lca.hpp  wt_hpd_ptr.hpp
include/data_structures/range_tree/: range_tree.hpp  range_tree_simple.hpp
include/data_structures/simple_tree/: simple_tree.hpp
include/data_structures/succinct/: nsrs.hpp  tree_ext_sct.hpp  wt_hpd.hpp  wt_hpd_rrr.hpp
include/data_structures/wavelet_tree/: wavelet_tree.hpp
include/interfaces/: path_decomposer.hpp  path_query_processor.hpp  succinct_tree.hpp
include/requests/: abstract_query.hpp  counting_query.hpp  median_query.hpp  pq_request.hpp  reporting_query.hpp  selection_query.hpp
include/wrappers/: README.md  bp_tree_gg.hpp  bp_tree_sada.hpp  bp_trees.hpp  ff_bitvector.hpp
java/: GUI.java  RandBracketSequence.java
perl/: benchmark_runner.pl  bp_bench_runner.pl  command_string_builder.pl  command_string_builder_for_normal_workflow.pl  complete_queryset_benchmark.pl  complete_queryset_benchmark_for_normal_workflow.pl  hpd_bench_runner.pl  instantiate.pl  massif_runner.pl  out.txt  query_time_measurements.pl  tree_bench_runner.pl  valgrind_runner.pl
src/benchmarking/utils/: CMakeLists.txt  aggregate_bench.cpp  aggregate_bench_refactored.cpp  aggregate_bench_refactored_hpd.cpp  aggregate_bench_refactored_sct.cpp  bench_underlying_trees.cpp  bp_bench.cpp  bp_bench_runner.cpp  hpd_bench.cpp  run_normal_bench.cpp  sample_bench.cpp  suites.cpp  suites_bp.cpp  suites_for_gui.cpp  suites_hpd.cpp  suites_modified_weights.cpp  suites_normal_gbench_workflow.cpp  suites_sct.cpp  tree_stats.cpp
src/experiments/: experimental_run.cpp
src/misc/: CMakeLists.txt  bender_farach_colton.hpp  bin2ordered.cpp  gentree_uar.cpp  hpd_preprocessor.hpp  pq_types.hpp  random1d_interval_generator.hpp  raw_processor.hpp  sdsl_types.hpp  simple_bitset.cpp  simple_bitset.hpp  space_occupancy.cpp
src/tests/data_structures/hpd/: CMakeLists.txt  test_hpd.cpp
src/tests/data_structures/hybrid/: CMakeLists.txt  integration_test.cpp
src/tests/data_structures/plain/: CMakeLists.txt  test_ext_ptr.cpp  test_nv.cpp  test_nv_lca.cpp  test_wt_hpd_ptr.cpp
src/tests/data_structures/range_tree/: CMakeLists.txt  test_range_tree.cpp
src/tests/data_structures/simple_tree/: CMakeLists.txt  test_simple_tree.cpp
src/tests/data_structures/succinct/: CMakeLists.txt  test_nsrs.cpp  test_tree_ext_sct.cpp  test_wt_hpd.cpp
src/tests/data_structures/wavelet_tree/: CMakeLists.txt  test_wt.cpp
src/tests/experiments/: CMakeLists.txt  test_bp_memusage.cpp  test_experiment_utils.cpp  test_experimental_run.cpp  test_memusage.cpp
src/tests/integration/: CMakeLists.txt  typed_interface_test.cpp  typed_succinct_tree_test.cpp  typed_test_example.cpp
src/tests/misc/: CMakeLists.txt  driver_query_stream_builder.cpp
src/tests/requests/: CMakeLists.txt  test_pq_requests.cpp
src/tests/wrappers/: CMakeLists.txt  test_ff_bitvector.cpp
